# dgen

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  SYNTAX.md  build.rs  test-examples.sh
benches/: bench.rs
dgen_examples/: http_with_json.dgen
dgen_examples/http/: http-lib.dgen  http-lib.pgen  use-http.dgen  use-http.pgen
dgen_examples/json/: json.dgen  json.pgen
dgen_libs/std/: chars.dgen  repeats.dgen  strings.dgen
pgen_examples/json/: json.pgen
pgen_libs/: boolean.pgen  chars.pgen  numbers.pgen  repeats.pgen  std.pgen  strings.pgen
pgen_libs/std/: strings.pgen
scripts/: travis-release-windows.sh  travis-release.sh
src/: arguments.rs  ast.rs  cli_opts.rs  column_spec_parser.lalrpop  context.rs  fun_test.rs  grammar.lalrpop  interpreter.rs  lib.rs  libraries.rs  main.rs  parse_test.rs  parser.rs  program.rs  prototype.rs  resolve.rs  rustfmt.toml  types.rs  verbosity.rs
src/builtins/: bin_length.rs  byte_order.rs  chars.rs  concat.rs  env.rs  from_file.rs  mod.rs  numeric.rs  repeat_delim.rs  select.rs  sequence.rs  strings.rs  to_string.rs
src/formatter/: csv.rs  mod.rs
src/functions/: ascii_string.rs  mod.rs  one_of.rs  unsigned_int.rs
src/generator/: chars.rs  concat.rs  constant.rs  either.rs  file.rs  int.rs  mapped.rs  mod.rs  nullable.rs  one_of.rs  repeat.rs  stable_select.rs  string.rs  uint.rs
src/interpreter/: ast.rs  errors.rs  grammar.lalrpop  grammar.rs  lexer.rs  libraries.rs  map.rs  mod.rs  module.rs  parse_test.rs  parser.rs  prototype.rs  resolve.rs  runtime_wrapper.rs  source.rs
src/program/: help.rs  mod.rs
test-data/: crlf-words.txt
(+38 files in other folders)
