[package]
name = "pgen"
version = "0.1.0"
authors = ["Phil Fried <philipsfried@gmail.com>"]
build = "build.rs"

[dependencies]
structopt = "0.2.10"
rand = "0.5.3"
log = "0.4"
env_logger = "0.5"
lalrpop-util = "0.16.0"
regex = "1.0.1"
failure = "0.1.1"
string_cache = "0.7"
lazy_static = "1.1"
itertools = "0.7.3"
encoding = "0.2.33"
byteorder = "1.2.6"

[build-dependencies]
lalrpop = "0.16.0"

[lib]
name = "pgen"
path = "src/lib.rs"

[[bin]]
name = "pgen"
path = "src/main.rs"
