[package]
name = "dgen"
version = "0.2.0"
readme = "README.md"
documentation = "https://github.com/psFried/dgen#dgen"
description = "An interpreted DSL for generating test data in any format"
authors = ["Phil Fried <philipsfried@gmail.com>"]
build = "build.rs"
repository = "https://github.com/psFried/dgen"
license = "MIT"
keywords = [ "generator", "data", "test", "random", "dsl" ]
categories = [ "command-line-utilities", "development-tools::testing", "encoding", "parsing", "template-engine" ]
autobenches = false
edition = "2018"

[profile.release]
lto = true

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench"
harness = false

[dependencies]
structopt = "0.2.10"
rand = "0.5.3"
log = "0.4"
env_logger = "0.5"
lalrpop-util = "0.16.0"
regex = "1.0.1"
failure = "0.1.2"
string_cache = "0.7"
lazy_static = "1.1"
itertools = "0.7.3"
encoding = "0.2.33"
byteorder = "1.2.6"
rustyline = "3.0"

[build-dependencies]
lalrpop = "0.16.0"

[lib]
name = "dgen"
path = "src/lib.rs"

[[bin]]
name = "dgen"
path = "src/main.rs"
